--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>study-vue</title>
-</head>
-<body>
-<div id="app"></div>
-<div id="portal-box"></div>
-<script src='index.js'></script>
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <div id="portal-box"></div>
+    <div id="old-container"></div>
+    <div id="new-container"></div>
+    <script src="index.js"></script>
+  </body>
 </html>
