--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>study-vue</title>
+    <title>Meow</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="index.js"></script>
   </body>
 </html>
